# ur5e_sim

./: .gitignore  CLAUDE.md  Rviz_floor.scene  leaf4_moveit_kinematics.yaml  ur_slam_ws.repos
bags/20260121_004737_clean/: params_rtabmap.yaml
bags/20260121_004737_clean/bag/: metadata.yaml
bags/20260121_012531_weak/: params_pointcloud_noiser.yaml
bags/20260121_012531_weak/bag/: metadata.yaml
bags/20260121_014742_weak/: params_pointcloud_noiser.yaml
bags/20260121_014742_weak/bag/: metadata.yaml
bags/20260121_015345_weak/: params_pointcloud_noiser.yaml
bags/20260121_015345_weak/bag/: metadata.yaml
bags/20260121_021139_mid/: params_pointcloud_noiser.yaml  params_rtabmap.yaml
bags/20260121_021139_mid/bag/: metadata.yaml
bags/20260121_021941_weak/: params_pointcloud_noiser.yaml  params_rtabmap.yaml
bags/20260121_021941_weak/bag/: metadata.yaml
bags/20260121_040229_weak/: params_pointcloud_noiser.yaml  params_rtabmap.yaml
bags/20260121_040229_weak/bag/: metadata.yaml
bags/20260121_041947_mid/: params_pointcloud_noiser.yaml
bags/20260121_041947_mid/bag/: metadata.yaml
bags/20260121_042758_mid/: params_pointcloud_noiser.yaml
bags/20260121_042758_mid/bag/: metadata.yaml
config/: pc_qos.yaml
docs/: experiment_guide.md  implementation_rules.md  node_leaf5.md  project_overview.md  run_bench_impl.md  run_bench_spec.md  todo.md
runs/: run_20260121_015221_weak2_noise.yaml  run_20260121_021045_mid_noise.yaml
scripts/: bootstrap.sh  build.sh  check_sim.sh  monitor_metrics.py  run_all.sh  run_bench.sh  run_experiment.sh  run_gazebo.sh  scan_pan_no_bag.sh  scan_pan_with_bag.sh  spawn_plant_collision.py
src/ur_slam_bringup/: CMakeLists.txt  package.xml
src/ur_slam_bringup/launch/: ur5e_gazebo.launch.py  ur5e_moveit.launch.py  ur5e_slam.launch.py
src/ur_slam_bringup/models/abstract_plant/: model.config  model.sdf
src/ur_slam_bringup/models/abstract_plant/meshes/: abstract_plant.dae
src/ur_slam_bringup/models/cucumber/: model.config  model.sdf
src/ur_slam_bringup/models/cucumber/meshes/: cucumber_branch2.dae
src/ur_slam_bringup/scripts/: add_cucumber_to_scene.py  depth_convert.py
src/ur_slam_bringup/src/: add_cucumber_to_scene.cpp
src/ur_slam_bringup/urdf/: ur5e_with_camera.urdf.xacro
src/ur_slam_bringup/worlds/: white_room.world
src/ur_slam_tools/: CMakeLists.txt  package.xml
src/ur_slam_tools/config/: noise_mid.yaml  noise_weak.yaml
src/ur_slam_tools/src/: arc_sweep_jointtraj.py  cloud_gate.py  coarse_to_fine_go_to_leaf.cpp  coarse_to_fine_go_to_leaf2.cpp  coarse_to_fine_go_to_leaf3.cpp  coarse_to_fine_go_to_leaf4.cpp  coarse_to_fine_go_to_leaf5.cpp  depth_image_noiser.py  go_to_leaf.cpp  pointcloud_metrics_csv.py  pointcloud_noiser.py
ur_slam_tools/: CMakeLists.txt  package.xml
